[gd_scene load_steps=4 format=3 uid="uid://ca1cxevi75yp4"]

[ext_resource type="Script" path="res://SeasonStatsScene.gd" id="1_ajav6"]
[ext_resource type="Texture2D" uid="uid://xh7wwx1airyc" path="res://Art/Stadium.png" id="2_jfn0f"]
[ext_resource type="Texture2D" uid="uid://dtpdfy4rc03ie" path="res://Art/Standings2.png" id="3_4221g"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_ajav6")

[node name="Stadium" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(1.152, 1.15098)
texture = ExtResource("2_jfn0f")

[node name="Panel" type="Panel" parent="."]
offset_right = 1152.0
offset_bottom = 648.0

[node name="Standings2" type="Sprite2D" parent="."]
position = Vector2(576, 296)
scale = Vector2(3, 2.75)
texture = ExtResource("3_4221g")

[node name="NameScroll" type="ScrollContainer" parent="."]
offset_left = 208.0
offset_top = 160.0
offset_right = 952.0
offset_bottom = 544.0
size_flags_horizontal = 3

[node name="Control" type="Control" parent="NameScroll"]
custom_minimum_size = Vector2(736, 384)
layout_mode = 2

[node name="Name" type="VBoxContainer" parent="NameScroll/Control"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
offset_right = 192.0
offset_bottom = 8.0
alignment = 1

[node name="Team" type="VBoxContainer" parent="NameScroll/Control"]
custom_minimum_size = Vector2(4, 0)
layout_mode = 2
offset_left = 192.0
offset_right = 264.0
offset_bottom = 24.0
alignment = 1

[node name="SixStat1" type="VBoxContainer" parent="NameScroll/Control"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
offset_left = 288.0
offset_right = 336.0
offset_bottom = 10.0
alignment = 1

[node name="SixStat2" type="VBoxContainer" parent="NameScroll/Control"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
offset_left = 368.0
offset_right = 416.0
offset_bottom = 20.0
alignment = 1

[node name="SixStat3" type="VBoxContainer" parent="NameScroll/Control"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
offset_left = 440.0
offset_right = 504.0
offset_bottom = 20.0
alignment = 1

[node name="SixStat4" type="VBoxContainer" parent="NameScroll/Control"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
offset_left = 528.0
offset_right = 576.0
offset_bottom = 20.0
alignment = 1

[node name="SixStat5" type="VBoxContainer" parent="NameScroll/Control"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
offset_left = 608.0
offset_right = 656.0
offset_bottom = 20.0
alignment = 1

[node name="SixStat6" type="VBoxContainer" parent="NameScroll/Control"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
offset_left = 685.0
offset_right = 733.0
offset_bottom = 20.0
alignment = 1

[node name="FiveStat1" type="VBoxContainer" parent="NameScroll/Control"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
offset_left = 296.0
offset_right = 344.0
offset_bottom = 20.0
alignment = 1

[node name="FiveStat2" type="VBoxContainer" parent="NameScroll/Control"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
offset_left = 392.0
offset_right = 440.0
offset_bottom = 20.0
alignment = 1

[node name="FiveStat3" type="VBoxContainer" parent="NameScroll/Control"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
offset_left = 488.0
offset_right = 536.0
offset_bottom = 20.0
alignment = 1

[node name="FiveStat4" type="VBoxContainer" parent="NameScroll/Control"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
offset_left = 584.0
offset_right = 632.0
offset_bottom = 20.0
alignment = 1

[node name="FiveStat5" type="VBoxContainer" parent="NameScroll/Control"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
offset_left = 680.0
offset_right = 728.0
offset_bottom = 20.0
alignment = 1

[node name="Pass" type="Button" parent="."]
offset_left = 224.0
offset_top = 48.0
offset_right = 320.0
offset_bottom = 104.0
text = "Passing"

[node name="Rush" type="Button" parent="."]
offset_left = 376.0
offset_top = 48.0
offset_right = 472.0
offset_bottom = 104.0
text = "Rushing"

[node name="Rec" type="Button" parent="."]
offset_left = 528.0
offset_top = 48.0
offset_right = 624.0
offset_bottom = 104.0
text = "Receiving"

[node name="Def" type="Button" parent="."]
offset_left = 680.0
offset_top = 48.0
offset_right = 776.0
offset_bottom = 104.0
text = "Defense"

[node name="Kick" type="Button" parent="."]
offset_left = 832.0
offset_top = 48.0
offset_right = 928.0
offset_bottom = 104.0
text = "Kicking"

[node name="NameTeam" type="Label" parent="."]
offset_left = 208.0
offset_top = 136.0
offset_right = 512.0
offset_bottom = 159.0
text = "                  Name                     Team"

[node name="SixStat1" type="Label" parent="."]
offset_left = 496.0
offset_top = 136.0
offset_right = 544.0
offset_bottom = 159.0
text = "Yards"
horizontal_alignment = 1

[node name="SixStat2" type="Label" parent="."]
offset_left = 576.0
offset_top = 136.0
offset_right = 624.0
offset_bottom = 159.0
text = "TDs"
horizontal_alignment = 1

[node name="SixStat3" type="Label" parent="."]
offset_left = 656.0
offset_top = 136.0
offset_right = 704.0
offset_bottom = 159.0
text = "Comp"
horizontal_alignment = 1

[node name="SixStat4" type="Label" parent="."]
offset_left = 736.0
offset_top = 136.0
offset_right = 784.0
offset_bottom = 159.0
text = "Atts"
horizontal_alignment = 1

[node name="SixStat5" type="Label" parent="."]
offset_left = 816.0
offset_top = 136.0
offset_right = 864.0
offset_bottom = 159.0
text = "%"
horizontal_alignment = 1

[node name="SixStat6" type="Label" parent="."]
offset_left = 893.0
offset_top = 136.0
offset_right = 941.0
offset_bottom = 159.0
text = "INT"
horizontal_alignment = 1

[node name="FiveStat1" type="Label" parent="."]
visible = false
offset_left = 504.0
offset_top = 136.0
offset_right = 552.0
offset_bottom = 159.0
text = "Stat 1"
horizontal_alignment = 1

[node name="FiveStat2" type="Label" parent="."]
visible = false
offset_left = 600.0
offset_top = 136.0
offset_right = 648.0
offset_bottom = 159.0
text = "Stat 2"
horizontal_alignment = 1

[node name="FiveStat3" type="Label" parent="."]
visible = false
offset_left = 696.0
offset_top = 136.0
offset_right = 744.0
offset_bottom = 159.0
text = "Stat 3"
horizontal_alignment = 1

[node name="FiveStat4" type="Label" parent="."]
visible = false
offset_left = 792.0
offset_top = 136.0
offset_right = 840.0
offset_bottom = 159.0
text = "Stat 4"
horizontal_alignment = 1

[node name="FiveStat5" type="Label" parent="."]
visible = false
offset_left = 888.0
offset_top = 136.0
offset_right = 936.0
offset_bottom = 159.0
text = "Stat 5"
horizontal_alignment = 1

[node name="Back" type="Button" parent="."]
offset_left = 512.0
offset_top = 576.0
offset_right = 640.0
offset_bottom = 640.0
text = "Back"

[connection signal="pressed" from="Pass" to="." method="_on_pass_pressed"]
[connection signal="pressed" from="Rush" to="." method="_on_rush_pressed"]
[connection signal="pressed" from="Rec" to="." method="_on_rec_pressed"]
[connection signal="pressed" from="Def" to="." method="_on_def_pressed"]
[connection signal="pressed" from="Kick" to="." method="_on_kick_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
